# Thesis

./: listener_baxter.txt  listener_effector.txt
end_effector/: CMakeLists.txt  package.xml  setup.py
end_effector/src/end_effector/: end_effector.py
main_final/: main_final.ino  ssid_pass.h
servo_input/: CMakeLists.txt  package.xml  setup.py
servo_input/src/servo_input/: servo_input.py  servo_input_sweep.py
